improved synchronization, use getOrCreate more